# demo-flask-api

./: .dockerignore  Dockerfile  README.md  forex_converter.py  main.py  pyproject.toml  requirements.txt  test_app.py
