[tool.poetry]
name = "currency-converter"
version = "0.1.0"
description = ""
authors = ["Kirat Bains <kiratbains09@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
forex-python = "^1.8"
flask = "^2.3.3"
flask-testing = "^0.8.1"
flask-limiter = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
